# valdo

./: .gitignore  README.md  meson.build
src/: config.vala.in  expression.vala  main.vala  meson.build  template.vala  templateengine.vala  value.vala  variable.vala
templates/: meson.build
templates/blueprint/: .editorconfig  README.md  meson.build  template.json
templates/blueprint/data/: ${APP_NAME}.gresource.xml  meson.build
templates/blueprint/data/ui/: window.blp
templates/blueprint/src/: main.vala  meson.build
templates/blueprint/src/core/: application.vala
templates/blueprint/src/ui/: main-window.vala
templates/cli/: README.md.in  template.json
templates/cli/src/: Command.vala  main.vala  meson.build
templates/elementaryos/: README.md  com.github.${USERNAME}.${PROGRAM_NAME}.yml  meson.build  template.json
templates/elementaryos-classic/: README.md  com.github.${USERNAME}.${PROGRAM_NAME}.yml  meson.build  template.json
templates/elementaryos/.github/workflows/: ci.yml
templates/elementaryos/data/: com.github.${USERNAME}.${PROGRAM_NAME}.appdata.xml  com.github.${USERNAME}.${PROGRAM_NAME}.desktop
templates/elementaryos/src/: Application.vala
templates/eos/: ${APP_ID}.yml  .gitignore  README.md  README.md.in  com.${USERNAME}.${PROGRAM_NAME}.yml.in  com.github.${USERNAME}.${PROGRAM_NAME}.yml.in  meson.build  meson.build.in  template.json
templates/eos/.github/workflows/: main.yml
templates/eos/data/: ${APP_NAME}.desktop.in.in  ${APP_NAME}.gresource.xml.in  ${APP_NAME}.gschema.xml.in  ${PROGRAM_NAME}.appdata.xml.in  ${PROGRAM_NAME}.desktop.in
templates/eos/po/: POTFILES  meson.build
templates/eos/src/: Application.vala  Application.vala.in  MainWindow.vala  meson.build
templates/eos/subprojects/: libadwaita.wrap
templates/eos/tests/: meson.build
templates/eos6/: template.json
templates/eos7/: .gitignore  README.md  meson.build  template.json
templates/eos7/data/: ${APP_NAME}.gresource.xml.in  ${APP_NAME}.gschema.xml.in  ${APP_NAME}.metainfo.xml.in.in  meson.build
templates/eos7/po/: POTFILES
templates/eos7/src/: Application.vala  Config.vala.in  MainWindow.vala  meson.build
templates/eos7/tests/: test.vala
templates/gnome/: .gitignore.in  COPYING  README.md  meson.build  template.json
templates/gnome/build-aux/flatpak/: ${APP_ID}.yaml
templates/gnome/build-aux/meson/: build-and-run.sh
templates/gnome/data/: ${APP_ID}.appdata.xml.in.in  ${APP_ID}.desktop.in.in  ${APP_ID}.gschema.xml.in  meson.build
templates/gnome/po/: POTFILES
templates/gnome/resources/: ${APP_NAME}.gresource.xml  meson.build
templates/gnome/resources/ui/: MainWindow.ui
templates/gnome/src/: Application.vala  MainWindow.vala  meson.build
templates/gnome/subprojects/: libadwaita.wrap
templates/gnome/vapi/: config.vapi
templates/gtk/: README.md.in  meson.build  meson.build.in  template.json
templates/gtk/src/: App.vala  MainWindow.vala
templates/gtk/ui/: main-window.ui  meson.build  resources.xml.in
templates/gtk3/: meson.build
templates/gtk3/src/: meson.build
templates/gtk3/ui/: main-window.ui
templates/lib/: README.md.in  meson.build.in  meson_options.txt  template.json
templates/lib/src/: library.vala  meson.build.in
templates/new/: README.md  meson.build.in  template.json
templates/new/src/: main.vala  meson.build  meson.build.in
templates/swifty-gtk4/: LICENSE.in  README.md.in  meson.build  template.json
templates/swifty-gtk4/Sources/: Main.vala.in  meson.build
