install_subdir('eos', install_dir: templates_dir)
install_subdir('eos6', install_dir: templates_dir)
install_subdir('gnome', install_dir: templates_dir)
install_subdir('gtk', install_dir: templates_dir)
install_subdir('gtk3', install_dir: templates_dir)
install_subdir('lib', install_dir: templates_dir)
install_subdir('new', install_dir: templates_dir)
